hard-gists/f6df442d0250f265409c/run.log
=== Docker Run Log for f6df442d0250f265409c ===
Started at: Mi 29. Okt 21:28:54 CET 2025

[2025-10-29 21:28:55] START: Running container for f6df442d0250f265409c
[2025-10-29 21:28:55] SUCCESS: Container 6c176eb82d4d295ec5eae1adfb4b088eea24c77c513c542be7215dfa196aa27c started for f6df442d0250f265409c
=== Container logs for f6df442d0250f265409c ===
  File "/snippet.py", line 22
    print "Usage: %s {imgfile} > outfile.bin"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f6df442d0250f265409c ===
[2025-10-29 21:28:57] INFO: Container 6c176eb82d4d295ec5eae1adfb4b088eea24c77c513c542be7215dfa196aa27c has stopped
